deep styled tags; fixed overflow bug

--- a/src/app/screens/edit-user-profile/edit-user-profile.component.scss
+++ b/src/app/screens/edit-user-profile/edit-user-profile.component.scss
@@ -6,7 +6,3 @@
   padding: 1.5rem 1rem 0.3rem 2rem;
   margin: 0;
 }
-
-.special-margin {
-  margin-bottom: 1.5rem !important;
-}
